--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -6,11 +6,11 @@ server.servlet.context-path=/springbootdemo
 #数据源配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/code?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-spring.datasource.url=jdbc:mysql://115.29.142.5:3306/code?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/code?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+#spring.datasource.url=jdbc:mysql://115.29.142.5:3306/code?useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-#spring.datasource.password=root
 spring.datasource.password=123456
+#spring.datasource.password=123456
 spring.datasource.initialSize=20
 spring.datasource.minIdle=50
 spring.datasource.maxActive=500
@@ -29,8 +29,8 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-#spring.redis.host=127.0.0.1
-spring.redis.host=115.29.142.5
+spring.redis.host=127.0.0.1
+#spring.redis.host=115.29.142.5
 # Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
